changed font size of input to try and prevent auto zoom on ios

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -208,6 +208,7 @@ form {
     margin-bottom: .75em;
     padding: 12px;
     width: 100%;
+    font-size: 16px;
     &:required {
       box-shadow: none !important;
     }
